fix API call functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   </head>
   <body>
     <div class="container">
+      <h1>Enter your medical condition</h1>
+      <form id="condition">
+        <label for="medical_condition">Input your medical condition:</label>
+        <input type="text" name="medical" id="medical_issue">
+        <button type="button" name="button" class="btn btn-success btn-lg">Submit</button>
+      </form>
+      <br>
+      <div id="doctor_info">
+
+      </div>
     </div>
   </body>
 </html>
