--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   </head>
   <body>
     <div class="container">
-      <h1>Enter your medical condition</h1>
+      <h1>Doctor Lookup</h1>
+      <h3>Welcome to Doctor Lookup! Enter your medical condition below to find local doctors near you.</h2>
+      <br>
       <form id="condition">
         <label for="medical_condition">Input your medical condition:</label>
         <input type="text" name="medical" id="medical_issue">
-        <button type="button" name="button" class="btn btn-success btn-lg">Submit</button>
+        <button type="button" name="button" class="btn btn-success">Submit</button>
       </form>
       <br>
       <div id="doctor_info">
-
       </div>
     </div>
   </body>
