add image to index header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container">
+      <img id="header" src="img/doctor.jpg" alt="doctor">
       <h1>Doctor Lookup</h1>
       <h3>Welcome to Doctor Lookup! Enter your medical condition below to find local doctors near you.</h2>
       <br>
