--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <form id="condition">
         <label for="medical_condition">Input your medical condition:</label>
         <input type="text" name="medical" id="medical_issue">
-        <button type="button" name="button" class="btn btn-success">Submit</button>
+        <button type="submit" name="button" class="btn btn-success">Submit</button>
       </form>
       <br>
       <div id="doctor_info">
